[package]
name = "deterix"
version = "0.1.3"
edition = "2021"
description = "Deterministic network emulator with microsecond timing precision"
license = "GPL-3.0"
homepage = "https://github.com/AmyangXYZ/deterix"
readme = "README.md"
keywords = ["deterministic", "precise-timing", "communication", "network", "scheduler"]

[dependencies]
crc32fast = "1.4.2"
libc = "0.2"
core_affinity = "0.8.1"
rand = "0.8.5" 

[[bin]]
name = "example"
path = "src/example/main.rs"
